# tutor-contrib-wikilearn

./: .env  .hatch_build.py  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: deploy.yml  release.yml  test.yml
requirements/: base.in  custom.txt  dev.in
tutorwikilearn/: constants.py  plugin.py
tutorwikilearn/patches/: credentials-dockerfile-post-git-checkout  credentials-settings-common  discovery-common-settings  k8s-deployments  mfe-lms-common-settings  openedx-cms-common-settings  openedx-cms-development-settings  openedx-cms-production-settings  openedx-common-settings  openedx-dockerfile-post-python-requirements  openedx-lms-common-settings  openedx-lms-development-settings  openedx-lms-production-settings
