# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-contrib-wikilearn"
description = "wikilearn plugin for Tutor"
authors = [
  { name = "Ahmed Khalid"},
  { email = "ahmed.khalid@arbisoft.com" },
]
license = { text = "AGPL-3.0-only" }

readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

]

# These fields will be set/modified by hatch_build.py
dynamic = ["version", "dependencies", "optional-dependencies"]

# hatch-specific configuration
[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"

[tool.hatch.version]
path = "tutorwikilearn/__about__.py"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Documentation = "https://github.com/wikimedia/tutor-contrib-wikilearn.git#readme"
Issues = "https://github.com/wikimedia/tutor-contrib-wikilearn.git/issues"
Source = "https://github.com/wikimedia/tutor-contrib-wikilearn.git"

[build-system]
requires = ["hatchling", "requests"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tutorwikilearn"]

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [
  "/tutorwikilearn",
  "requirements/base.in",
  "requirements/custom.txt",
  "requirements/dev.in",
  "LICENSE.txt",
  ".hatch_build.py",
]
exclude = ["tests*"]

[project.entry-points."tutor.plugin.v1"]
wikilearn = "tutorwikilearn.plugin"

[tool.hatch.metadata]
# Allow github dependencies in plugins.txt
allow-direct-references = true